# nextract

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: prd.md
nextract/: __init__.py  adaptive_extraction.py  agent_runner.py  chunking.py  completeness_retry.py  config.py  core.py  field_chunking.py  files.py  legacy_cli.py  logging.py  merge.py  mimetypes_map.py  multipass.py  page_extraction.py  parallel.py  pdf_analyzer.py  pdf_extractor.py  pricing.py  prompts.py  provenance.py  schema.py  schema_splitter.py  sentence_chunking.py
nextract/chunking/: __init__.py  fixed_size_chunker.py  hybrid_chunker.py  page_chunker.py  section_chunker.py  semantic_chunker.py  table_aware_chunker.py
nextract/cli/: __init__.py  __main__.py  main.py
nextract/core/: __init__.py  artifacts.py  base.py  config.py  exceptions.py  model_capabilities.py
nextract/extractors/: __init__.py  custom_extractor_template.py  fallback_mixin.py  hybrid_extractor.py  llamaindex_extractor.py  ocr_extractor.py  text_extractor.py  textract_extractor.py  vlm_extractor.py
nextract/ingest/: __init__.py
nextract/output/: __init__.py  citation_renderer.py  formatters.py
nextract/parse/: __init__.py  layout_parser.py  ocr_parser.py  text_parser.py
tests/: README.md  __init__.py  test_adaptive_extraction.py  test_adaptive_extraction_nested.py  test_adaptive_threshold.py  test_error_handling.py  test_integration.py  test_multipass.py  test_provenance.py  test_sentence_chunking.py
tests/unit/: __init__.py  (+2 more)
(+110 files in other folders)
