[tool.poetry]
name = "nextract"
version = "0.1.0"
description = "Structured extraction framework over Pydantic AI Agent with JSON Schema & Pydantic model outputs."
authors = ["Saksham Mittal <saksham.mittal@nexla.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nextract" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = ">=2.7"
pydantic-ai = ">=0.10.0"   # Uses Agent, StructuredDict, BinaryContent, etc.
jsonschema = ">=4.19"
structlog = ">=24.1.0"
typer = ">=0.12.0"
tenacity = ">=8.2.3"
rich = ">=13.7"

[tool.poetry.scripts]
nextract = "nextract.cli:app"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.7"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
